Add print color adjustment for skill bars
Added print color adjustment styles for skill bars.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
                 margin: 0;
                 padding: 20px;
             }
+            .skill-bar {
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+                color-adjust: exact;
+            }
         }
         
         body {
