--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div class="company">Alpinetech Business Solutions Pvt Ltd - Remote (India)</div>
     <ul class="job-details">
         <li>Started as the sole engineer in 2024 and single-handedly built + shipped both B2B products (ticketing + asset management) from 0 → first 500 customers</li>
-        <li>Grew the engineering team from 1 → 6 (currently leading 2 full-stack, 2 frontend, 1 QA, 1 intern) with full ownership of hiring, hiring, onboarding, code reviews, 1:1s, and career growth</li>
+        <li>Grew the engineering team from 1 → 6 (currently leading 2 full-stack, 2 frontend, 1 QA, 1 intern) with full ownership of hiring, onboarding, code reviews, 1:1s, and career growth</li>
         <li>Own complete technical vision & roadmap — define quarterly OKRs, architecture decisions, tech debt backlog, and production SLOs (99.9% uptime)</li>
         <li>Designed and enforced multi-tenant platform (Next.js 14 App Router, FastAPI, PostgreSQL, Redis) with RBAC, audit logs, real-time notifications, and enterprise-grade security</li>
         <li>Continue to be the most hands-on coder on the team while mentoring juniors and shipping 70%+ of critical features myself (Flutter mobile, Next.js dashboards, FastAPI backend, DigitalOcean infra, CI/CD)</li>
